--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
 		"nette/tester": "^2.0",
 		"tracy/tracy": "^2.3",
 		"nette/utils": "^3.0",
+		"nette/di": "^3.1 || ^4.0",
 		"phpstan/phpstan": "^1",
 		"nette/php-generator": "^3.6 || ^4.0"
 	},
